--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "batch-decrypt-ether-accounts",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/*.js"
   },
   "author": "Robin Gruenke",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eimfach/batch-decrypt-ether-accounts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/eimfach/batch-decrypt-ether-accounts/issues"
+  },
+  "homepage": "https://github.com/eimfach/batch-decrypt-ether-accounts#readme",
+  "description": "",
+  "dependencies": {
+    "mosayk": "^2.0.0"
+  },
+  "devDependencies": {
+    "blue-tape": "^1.0.0",
+    "express": "^4.16.3"
+  }
 }
