--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "homepage": "https://github.com/eimfach/batch-decrypt-ether-accounts#readme",
   "description": "",
   "dependencies": {
-    "mosayk": "^2.0.0"
+    "mosayk": "^3.0.0"
   },
   "devDependencies": {
     "blue-tape": "^1.0.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "tap-diff": "^0.1.1",
+    "tap-notify": "^1.0.0"
   }
 }
